force-app/main/default/objects/skilljar__Purchase__c/skilljar__Purchase__c.object-meta.xml
<CustomObject>
    <label>Purchase</label>
    <nameField>
        <label>Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>