force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Credits_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Credits_Redeemed__c</fullName>
    <label>Credits Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>