force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Offer__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>skilljar__Offer__c</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>