force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Offer_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Offer_Currency_Code__c</fullName>
    <description>ISO 4217 code of the currency.</description>
    <label>Offer Currency Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>