force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Offer_Price__c</fullName>
    <description>The amount that the offer was sold for at the time of purchase</description>
    <label>Offer Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>