force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Offer_Sku__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Offer_Sku__c</fullName>
    <description>SKU on offer, denormalized here in case it changes</description>
    <label>Offer Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>