force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Order_Id__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Order_Id__c</fullName>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>