force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>STRIPE</fullName>
            </value>
            <value>
                <fullName>STRIPE_BTC</fullName>
            </value>
            <value>
                <fullName>PAYPAL</fullName>
            </value>
            <value>
                <fullName>PAYFLOW</fullName>
            </value>
            <value>
                <fullName>CYBERSRC</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>