force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Payment_Processor_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Payment_Processor_Order_Id__c</fullName>
    <description>Transaction ID from the payment processor</description>
    <label>Payment Processor Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>