force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Payment_Processor_Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Payment_Processor_Purchase_Data__c</fullName>
    <inlineHelpText>JSON dictionary of purchase information provided by payment processor</inlineHelpText>
    <label>Payment Processor Purchase Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>