force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Promo_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo Code</label>
    <referenceTo>skilljar__Promo_Code__c</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>