force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Promo_Code_Price__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Promo_Code_Price__c</fullName>
    <description>Price set by promo code, if one was used. Denormalized here in case code price changes.</description>
    <label>Promo Code Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>