force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Promo_Code_Quantity__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Promo_Code_Quantity__c</fullName>
    <description>Number of items the promo code was applied. This may be less than the purchase quantity if the use count on the promo code was less than the purchase quantity.</description>
    <label>Promo Code Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>