force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Purchased_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Purchased_At__c</fullName>
    <label>Purchased At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>