force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Quantity__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Quantity__c</fullName>
    <description>The number of items purchased</description>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>