force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Refunded_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Refunded_At__c</fullName>
    <label>Refunded At</label>
    <type>DateTime</type>
</CustomField>