force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__State__c.field-meta.xml
<CustomField>
    <fullName>skilljar__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>REFUNDED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>FLAGGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>