force-app/main/default/objects/skilljar__Purchase__c/fields/skilljar__Tax_Price__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Tax_Price__c</fullName>
    <description>Total tax applied to the purchase. Optional, depending on payment gateway integration</description>
    <label>Tax Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>